--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "autoprefixer": "^10.2.3",
+    "firebase": "^8.2.6",
     "formik": "^2.2.6",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.27.14",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^2.0.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
